--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=""
+      content="Boostmysites empowers aspiring tech entrepreneurs with AI-driven solutions and expert mentorship to launch and scale their businesses globally. From company registration to client acquisition, we provide the guidance you need to succeed. Join us and build your dream business today!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
